Bug 466359 - since upgrade to KDE Framework 5.103, kstart5 does not return after starting application
Summary: since upgrade to KDE Framework 5.103, kstart5 does not return after starting...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.103.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: thenujan
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-02-24 16:01 UTC by Erwan David
Modified: 2023-03-24 23:01 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.105
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erwan David 2023-02-24 16:01:37 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. in a terminal type kstart5 --windowclass konsole konsole
2. a new konsole is started, but the kstart5 command does not return
3. 

OBSERVED RESULT


EXPECTED RESULT
the kstart5 command returns after starting the new konsole

SOFTWARE/OS VERSIONS

Operating System: Debian GNU/Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.0-3-amd64 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Worked with kde framework 5.102
Comment 2 Nate Graham 2023-02-28 20:15:39 UTC
Oh dear, yeah. Because we now emitResult() only after the process has actually terminated, rather than immediately.

Perhaps we can fix KStart to handle this change better?
Comment 3 Nicolas Fella 2023-02-28 20:17:02 UTC
> Perhaps we can fix KStart to handle this change better?

No, we must revert to the original behavior
Comment 4 Nate Graham 2023-03-01 14:50:05 UTC
Ok.
Comment 5 Bug Janitor Service 2023-03-16 10:23:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1225
Comment 6 Nicolas Fella 2023-03-24 22:33:41 UTC
Git commit fea052ba369e474a092516a4717556b52ff92e00 by Nicolas Fella, on behalf of Thenujan Sandramohan.
Committed on 24/03/2023 at 22:33.
Pushed by nicolasfella into branch 'kf5'.

CommandLauncher: call emitResult() as soon as process has started

This MR makes `emitResult` get called as soon as the process has started instead of when the process has ended. It also changes `emitDelayedError` as a protected member of `KProcessRunner` to make it invokable by `ForkingProcessRunner`. It also removes `processFinished` signal as it's not used anymore.

M  +0    -2    src/gui/commandlauncherjob.cpp
M  +1    -2    src/gui/kprocessrunner.cpp
M  +1    -6    src/gui/kprocessrunner_p.h

https://invent.kde.org/frameworks/kio/commit/fea052ba369e474a092516a4717556b52ff92e00
Comment 7 Nicolas Fella 2023-03-24 23:00:42 UTC
Git commit 01481fb95ec443988dfbf51116d807359c08dfab by Nicolas Fella, on behalf of Thenujan Sandramohan.
Committed on 24/03/2023 at 22:38.
Pushed by nicolasfella into branch 'master'.

CommandLauncher: call emitResult() as soon as process has started

This MR makes `emitResult` get called as soon as the process has started instead of when the process has ended. It also changes `emitDelayedError` as a protected member of `KProcessRunner` to make it invokable by `ForkingProcessRunner`. It also removes `processFinished` signal as it's not used anymore.

M  +0    -2    src/gui/commandlauncherjob.cpp
M  +1    -2    src/gui/kprocessrunner.cpp
M  +1    -6    src/gui/kprocessrunner_p.h

https://invent.kde.org/frameworks/kio/commit/01481fb95ec443988dfbf51116d807359c08dfab